--- a/package.json
+++ b/package.json
@@ -4,17 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "eleventy",
-    "start": "eleventy --serve"
+    "sass": "sass --style=compressed src/scss:src/css/",
+    "build": "npm run sass && eleventy",
+    "watch:sass": "npm run sass -- --watch",
+    "watch:eleventy": "eleventy --serve",
+    "start": "npm-run-all --parallel watch:*"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@11ty/eleventy": "^0.10.0"
+    "@11ty/eleventy": "^0.10.0",
+    "npm-run-all": "^4.1.5"
   },
   "dependencies": {
     "acorn": "^7.1.1",
-    "core-js": "^3.6.4"
+    "core-js": "^3.6.4",
+    "sass": "^1.26.3"
   }
 }
